--- a/html/paginaHome.html
+++ b/html/paginaHome.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/paginaHome.css">
 </head>
+
 <body>
 
 
     <div class="telaFlutuante">
-
+        <h2>Minha garota,</h2>
+        <p>Hoje celebramos 2 anos de uma história que só o amor poderia escrever. Dois anos de nós, de sonhos
+            compartilhados, de risadas intermináveis e de desafios superados lado a lado. Meu coração se enche de
+            gratidão por cada dia ao seu lado e pela mulher incrível que Deus colocou em minha vida.</p>
+        <p></p>
     </div>
-    
+
 
     <script src="../js/stars.js"></script>
 </body>
+
 </html>
