adicionando imagens e video

--- a/html/paginaHome.html
+++ b/html/paginaHome.html
@@ -13,13 +13,51 @@
 
     <div class="telaFlutuante">
         <h2>Minha garota,</h2>
-        <p>Hoje celebramos 2 anos de uma história que só o amor poderia escrever. Dois anos de nós, de sonhos
-            compartilhados, de risadas intermináveis e de desafios superados lado a lado. Meu coração se enche de
-            gratidão por cada dia ao seu lado e pela mulher incrível que Deus colocou em minha vida.</p>
-        <p></p>
+        <p>Hoje completamos 2 aninhos de uma história que eu não poderia ser mais feliz de viver, ao teu lado. Dois anos
+            de nós, de sonhos compartilhados e planejados juntos, de muitas risadas e de desafios superados lado a lado.
+            Meu coração é cheio de gratidão por cada dia ao seu lado e pela mulher incrível que Deus colocou em minha
+            vida, só tenho motivos para agradecer a Deus por sempre ter me abençoado com muito mais do que eu mereço.
+        </p>
+        <p>A nossa relação tem sido um presente de Deus, um reflexo de como Deus nos une e nos molda para algo ainda
+            maior. Cada momento que passamos juntos, seja nos dias mais felizes ou nos dias difíceis, só faz nos
+            edificar, fortalecer e me dar a certeza que fomos feitos um para o outro. Com você, eu aprendi que o amor é
+            paciente, é cuidadoso e está sempre disposto a crescer, mesmo diante das imperfeições (que obviamente não
+            são suas, pq vc é perfeita 😉).
+        </p>
+        <P>Você é a resposta à minha oração mais sincera, e, a cada dia, tenho mais certeza de que Deus te escolheu a
+            dedo para mim, e sinceramente, não sei como agradecer a Ele por um presente tão precioso e necessário na
+            minha vida, que é você. Você não imagina o quanto ilumina, alegra e melhora minha vida, o quanto seu sorriso
+            me traz paz e como seu amor me torna um homem melhor e mais forte.</P>
+        <p>Obrigado por ser meu porto seguro, por estar comigo mesmo quando não sou a melhor versão de mim e por me
+            ensinar o que é amar de verdade. Quero retribuir tudo isso sendo o homem que te faça feliz, que esteja ao
+            seu lado em cada vitória e que enxugue suas lágrimas nos momentos difíceis. Quero construir com você uma
+            vida, uma família, ter filhos, um futuro que seja bem mais lindo do que o que já vivemos até aqui.</p>
+        <p>Você é um presente precioso, meu amor, e eu nunca me canso de me gabar da namorada que tenho, do quão eu sou
+            apaixonado e abençoado por ter uma pessoa como você ao meu lado, e chamar de minha, de me orgulhar de quem
+            você é e de tudo o que faz. Que Deus continue nos abençoando, guiando nosso caminho e fortalecendo o que
+            construímos juntos.</p>
+        <p>Agradeço por esses 2 anos incríveis e por todos os dias em que posso acordar e ler seu “Bom dia bê”. Você é o
+            maior presente que a vida me deu, e eu mal posso esperar por tudo o que ainda vamos viver, esses dois anos
+            vão ser pequenos perto da vida que vamos construir juntos amor.</p>
+        <p>Eu te amo mais do que qualquer palavra possa expressar, nem todas as palavras de amor que existem e todos
+            cânticos de Salomão são suficientes para definir meu amor por você. Hoje e sempre, minha meta de vida é te
+            fazer feliz. Parabéns para nós e pelo amor incrível que compartilhamos. FELIZ 2.0 NENISS</p>
+        <p>Com todo o amor do mundo,</p>
+        <p>Seu eterno namorado. ❤️</p>
+
+
+        <!-- Div com o vídeo -->
+        <div class="video-homenagem">
+            <h2>Aqui esta um pouco do que amei viver com voçê</h2>
+            <video controls>
+                <source src="../media/2-years-love.mp4" type="video/mp4">
+            </video>
+        </div>
     </div>
 
 
+
+    <!-- arquivo js -->
     <script src="../js/stars.js"></script>
 </body>
 
