--- a/index.html
+++ b/index.html
@@ -21,6 +21,27 @@
 
 
 
+    <!-- Imagens no fundo -->
+    <div class="fundo">
+        <img src="../media/WhatsApp Image 2024-11-22 at 17.38.41 (1).jpeg" alt="foto 1" class="foto-fundo">
+        <img src="../media/WhatsApp Image 2024-11-22 at 17.38.41 (10).jpeg" alt="foto 1" class="foto-fundo">
+        <img src="../media/WhatsApp Image 2024-11-22 at 17.38.41 (2).jpeg" alt="foto 1" class="foto-fundo">
+        <img src="../media/WhatsApp Image 2024-11-22 at 17.38.41 (4).jpeg" alt="foto 1" class="foto-fundo">
+        <img src="../media/WhatsApp Image 2024-11-22 at 17.38.41 (5).jpeg" alt="foto 1" class="foto-fundo">
+        <img src="../media/WhatsApp Image 2024-11-22 at 17.38.41 (6).jpeg" alt="foto 1" class="foto-fundo">
+        <img src="../media/WhatsApp Image 2024-11-22 at 17.38.41 (7).jpeg" alt="foto 1" class="foto-fundo">
+        <img src="../media/WhatsApp Image 2024-11-22 at 17.38.41 (8).jpeg" alt="foto 1" class="foto-fundo">
+        <img src="../media/WhatsApp Image 2024-11-22 at 17.38.41 (9).jpeg" alt="foto 1" class="foto-fundo">
+        <img src="../media/WhatsApp Image 2024-11-22 at 17.38.41.jpeg" alt="foto 1" class="foto-fundo">
+        <img src="../media/WhatsApp Image 2024-11-22 at 17.38.42 (1).jpeg" alt="foto 1" class="foto-fundo">
+        <img src="../media/WhatsApp Image 2024-11-22 at 17.38.42 (2).jpeg" alt="foto 1" class="foto-fundo">
+        <img src="../media/WhatsApp Image 2024-11-22 at 17.38.42 (3).jpeg" alt="foto 1" class="foto-fundo">
+        <img src="../media/WhatsApp Image 2024-11-22 at 17.38.42 (4).jpeg" alt="foto 1" class="foto-fundo">
+        <img src="../media/WhatsApp Image 2024-11-22 at 17.38.42 (5).jpeg" alt="foto 1" class="foto-fundo">
+        <img src="../media/WhatsApp Image 2024-11-22 at 17.38.42 (6).jpeg" alt="foto 1" class="foto-fundo">
+    </div>
+
+
     <script src="../js/stars.js"></script>
 </body>
 
