Corrigindo erro ortográfico

--- a/html/paginaHome.html
+++ b/html/paginaHome.html
@@ -48,7 +48,7 @@
 
         <!-- Div com o vídeo -->
         <div class="video-homenagem">
-            <h2>Aqui esta um pouco do que amei viver com voçê</h2>
+            <h2>Aqui esta um pouco do que amei viver com você</h2>
             <video controls>
                 <source src="../media/2-years-love.mp4" type="video/mp4">
             </video>
